--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,12 +1,14 @@
+
+
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class => ('hilite' if @title_color == 'Yellow')}=link_to "Movie Title", movies_path(:sorting => 'title'), id: "title_header"
       %th Rating
-      %th Release Date
+      %th{:class => ('hilite' if @release_data_color == 'Yellow')}=link_to "Release Date", movies_path(:sorting => 'release_date'), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
