--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -3,6 +3,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get, id: "ratings_form" do
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    - if not @filter_ratings.nil? 
+      -if @filter_ratings.include? rating
+        = check_box_tag "ratings[#{rating}]", 1, true
+      -else
+        = check_box_tag "ratings[#{rating}]", 1, false
+    -else
+      = check_box_tag "ratings[#{rating}]", 1,false
+  = submit_tag 'Refresh', id: "ratings_submit"
+  
+  
 %table#movies
   %thead
     %tr
@@ -10,7 +24,7 @@
       %th Rating
       %th{:class => ('hilite' if @release_data_color == 'Yellow')}=link_to "Release Date", movies_path(:sorting => 'release_date'), id: "release_date_header"
       %th More Info
-  %tbody
+    %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title 
