--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -1,6 +1,6 @@
 -# edit.html.haml using partial
 
-%h1 Edit Existing Movie
+%h2 Edit Existing Movie
 
 = form_tag movie_path(@movie), :method => :put do
 
@@ -13,4 +13,7 @@
   = label :movie, :release_date, 'Released On'
   = date_select :movie, :release_date
 
+  = label :movie, :director, 'Director'
+  = text_field :movie, 'director'
+  
   = submit_tag 'Update Movie Info'
