--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,30 +1,29 @@
 -#  This file is app/views/movies/index.html.haml
+%h2 All Movies
 
-= form_tag movies_path, :method => :get, id: "ratings_form" do
+= form_tag movies_path, :method => :get, :id => 'ratings_form' do
+  = hidden_field_tag "title_sort", true if @title_header
+  = hidden_field_tag ":release_date_sort", true if @date_header
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    - if not session[:checked].nil? 
-      -if session[:checked].include? rating
-        = check_box_tag "ratings[#{rating}]", 1, true
-      -else
-        = check_box_tag "ratings[#{rating}]", 1, false
-    -else
-      = check_box_tag "ratings[#{rating}]", 1,false
-  = submit_tag 'Refresh', id: "ratings_submit"
- 
-%table#movies
+    = check_box_tag "ratings[#{rating}]", 1, @selected_ratings.include?(rating), :id => "ratings_#{rating}"
+  = submit_tag 'Refresh', :id => 'ratings_submit'
+
+%table.table-striped.col-md-10#movies
   %thead
     %tr
-      %th{ :class => session[:title]}= link_to 'Movie Title', movies_path(sorting: "title"), :id => 'title_header'
+      %th{:class => @title_header}= link_to 'Movie Title', movies_path(:sort => 'title', :ratings => @selected_ratings), :id => 'title_header'
       %th Rating
-      %th{ :class => session[:release]}= link_to 'Release Date', movies_path(sorting: "release_date"), :id => 'release_date_header'
+      %th Director
+      %th{:class => @date_header}= link_to 'Release Date', movies_path(:sort => 'release_date', :ratings => @selected_ratings), :id => 'release_date_header'
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title 
         %td= movie.rating
+        %td= movie.director
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
